web: filter option icon spacing fixes
    - fix collection's icons spacing
    - fix folder's icons spacing
    - fix favourite/trash/all items icons spacing
    - fix share's icons spacing

^fox-64869

--- a/apps/web/src/scss/base.scss
+++ b/apps/web/src/scss/base.scss
@@ -320,6 +320,6 @@ code {
   }
 }
 
-button i.fa {
+button i.fa, .text-muted.invisible {
   margin-right: 0.25rem;
 }
